--- a/debootstrap/debian/changelog
+++ b/debootstrap/debian/changelog
@@ -1,3 +1,9 @@
+debootstrap (1.0.81+parrot1) testing; urgency=medium
+
+  * Minor fixes to parrot scripts
+
+ -- Lisetta "Sheireen" Ferrero <sheireen@autistiche.org>  Sun, 15 May 2016 01:14:25 +0400
+
 debootstrap (1.0.81+parrot0) testing; urgency=medium
 
   * Sync with Debian. Remaining changes:
