--- a/debootstrap/debian/changelog
+++ b/debootstrap/debian/changelog
@@ -1,3 +1,9 @@
+debootstrap (1.0.81+parrot2) testing; urgency=medium
+
+  * Don't remove stable and testing scripts from debian-installer
+
+ -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Mon, 18 Jul 2016 20:09:41 +0200
+
 debootstrap (1.0.81+parrot1) testing; urgency=medium
 
   * Minor fixes to parrot scripts
