--- a/debootstrap/debian/changelog
+++ b/debootstrap/debian/changelog
@@ -1,3 +1,9 @@
+debootstrap (1.0.83+parrot0) testing; urgency=medium
+
+  * Increment version to overwrite new debian version
+
+ -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Tue, 27 Sep 2016 23:35:38 +0200
+
 debootstrap (1.0.81+parrot2) testing; urgency=medium
 
   * Don't remove stable and testing scripts from debian-installer
