Import Debian version 1.0.87

--- a/README
+++ b/README
@@ -10,19 +10,29 @@ You can run debootstrap from its source tree without installing it. This
 can be useful if you want a quick way to make a Debian chroot on another
 system, or if you are testing modifications to debootstrap.
 
-First, get the source. 
+First, get the source.
 
 * Either by using git
-  git clone git://git.debian.org/d-i/debootstrap.git
+  git clone https://anonscm.debian.org/git/d-i/debootstrap.git
 
-* Or by visiting <http://packages.debian.org/source/sid/debootstrap>
+* Or by visiting <https://packages.debian.org/source/sid/debootstrap>
   and downloading the tar.gz file
 
-Then as root, in the debootstrap source directory:
+Then in the debootstrap source directory:
 
-make devices.tar.gz
-export DEBOOTSTRAP_DIR=`pwd`
-debootstrap sid sid
+    export DEBOOTSTRAP_DIR=`pwd`
+    sudo ./debootstrap stable my-stable-dir
+
+If you are running a multi-stage boot strap (for example for a QEMU
+rootfs) you don't even need root:
+
+    export DEBOOTSTRAP_DIR=`pwd`
+    fakeroot ./debootstrap --foreign --arch=armhf testing my-testing-dir http://deb.debian.org/debian
+
+Of course you will need to execute the second stage as root to finish the bootstrap:
+
+   (on foreign hardware)
+   /debootstrap/debootstrap --second-stage
 
 
 Future
@@ -31,7 +41,7 @@ Future
   * Cross-strap support - so you can bootstrap a filesystem to the
     point where it will successfully boot, and finish installing itself
     without having to be running the target architecture or OS yourself.
-    This means you should be able to run 
+    This means you should be able to run
 
 	debootstrap --arch powerpc sarge ./sarge-ppc-chroot ...
 
