--- a/debootstrap.8
+++ b/debootstrap.8
@@ -71,23 +71,26 @@ or apt, and that it is far better to specify the entire base system than
 rely on this option.
 With this option set, this behaviour is disabled.
 .IP
+.IP "\fB\-\-log\-extra\-deps\fP"
+If you want to record additional dependencies when resolving package dependencies,
+set this option to track them through debootstrap.log.
+.IP
 .IP "\fB\-\-variant=minbase|buildd|fakechroot\fP"
 Name of the bootstrap script variant to use.
 Currently, the variants supported are minbase, which only includes
-essential packages and apt; buildd, which installs the build-essential
-packages into
-.IR TARGET ;
-and fakechroot, which installs the packages without root privileges.
-The default, with no \fB\-\-variant=X\fP argument, is to create a base
-Debian installation in
-.IR TARGET .
+\fIrequired\fR packages and apt; buildd, which installs the build-essential
+packages and fakechroot, which installs the packages without root privileges.
+The default, with no \fB\-\-variant=X\fP argument, is to create a
+base Debian installation with all packages of priority \fIrequired\fR and
+\fIimportant\fR, including apt.
 .IP
 .IP "\fB\-\-merged-usr\fP"
 Create /{bin,sbin,lib}/ symlinks pointing to their counterparts in /usr/.
+(Default for most variants.)
 .IP
 .IP "\fB\-\-no-merged-usr\fP"
 Do not create /{bin,sbin,lib}/ symlinks pointing to their counterparts in /usr/.
-(Default.)
+(Default for the buildd variant.)
 .IP
 .IP "\fB\-\-keyring=KEYRING\fP"
 Override the default keyring for the distribution being bootstrapped,
@@ -107,11 +110,10 @@ Produce more info about downloading.
 .IP
 .IP "\fB\-\-print\-debs\fP"
 Print the packages to be installed, and exit.
-Note that a TARGET directory must be specified so debootstrap can
-download Packages files to determine which packages should be installed,
-and to resolve dependencies.
-The TARGET directory will be deleted unless \-\-keep\-debootstrap\-dir
-is specified.
+Note that an empty or non-existing TARGET directory must be specified so
+that debootstrap can download Packages files to determine which packages
+should be installed, and to resolve dependencies. The TARGET directory
+will be deleted unless \-\-keep\-debootstrap\-dir is specified.
 .IP
 .IP "\fB\-\-download\-only\fP"
 Download packages, but don't perform installation.
@@ -136,14 +138,21 @@ a foreign chroot) (requires \-\-second\-stage)
 Don't delete the /debootstrap directory in the target after completing the
 installation.
 .IP
+.IP "\fB\-\-cache\-dir=DIR\fP"
+Cache .deb files under directory. It should be an absolute path.
+.IP
 .IP "\fB\-\-unpack\-tarball=FILE\fP"
-Acquire .debs from tarball FILE instead of downloading via http.
+Acquire .debs from gzipped tarball FILE (specified with absolute path)
+instead of downloading via HTTP(S).
 .IP
 .IP "\fB\-\-make\-tarball=FILE\fP"
-Instead of bootstrapping, make a tarball (written to FILE) of the downloaded
-packages.
+Instead of bootstrapping, make a gzipped tarball (written to FILE) of the
+downloaded packages.
 The resulting tarball may be passed to a later
 .BR \-\-unpack\-tarball .
+Note that an empty or non-existing TARGET directory must be specified so
+that debootstrap can download packages to prepare the tarball. The TARGET
+directory will be deleted unless \-\-keep\-debootstrap\-dir is specified.
 .IP
 .IP "\fB\-\-debian\-installer\fP"
 Used for internal purposes by the debian-installer
