--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debootstrap (2:1.0.114+parrot3) rolling; urgency=medium
+
+  * always include ca-certificates.
+
+ -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Tue, 28 Apr 2020 22:29:52 +0200
+
 debootstrap (2:1.0.114+parrot2) testing; urgency=medium
 
   * Add lts and rolling flavors.
